--- a/style.css
+++ b/style.css
@@ -1,19 +1,269 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 5px;
+}
 body{
-    background-color: bisque;
+  padding: 0;
+  margin: 0;
 }
 
-.containerMap{
-    border: 2px solid black;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.container {
+  padding: 0;
+  width: 100vw;
+  height: auto;
+  background-color: #494949;
 }
 
-.map{
-    
-    border: 2px solid black;
+.title {
+  height: 16vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-bottom: 20px;
+}
+h1{
+  margin-bottom: 10px;
+  color: #f4f4f4;
+  font-size: 6rem;
+}
 
+.globalContent {
+  margin-top: -13px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.containerLeft {
+  position: relative;
+  padding-top: 4%;
+  width: 40%;
+  height: 100vh;
+  overflow-y: auto;
+  /* background-color: aquamarine; */
+}
+.containerLeft::-webkit-scrollbar {
+  display: none; /* Masquer la scrollbar */
+}
+.inserCard{
+  overflow-y: auto;
+  position: relative;
+  border: solid 2px black;
+  border-radius: 15px;
+  background: #e0e0e0;
+  box-shadow: inset -29px 29px 58px #989898,
+            inset 29px -29px 58px #ffffff;
+}
+.containerLeft h2 {
+  font-size: xxx-large;
+  color: white;
+  text-align: center;
+}
+
+.containerRight {
+  border-top: 8px solid black;
+  /* border-left: 8px black solid; */
+  width: 50%;
+  height: 100vh;
+  background-color: #555;
+}
+
+#map {
+  height: 100%;
+  width: 100%;
+}
+
+/* Style des cards */
+.contact-card {
+  background-color: #5d6655;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  padding: 15px;
+  transition: transform 0.2s ease;
+}
+
+.contact-card:hover {
+  transform: translateY(-5px);
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.photoProfil {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.nameVille h3 {
+  color: floralwhite;
+  margin: 0;
+  font-size: 2.2em;
+}
+
+.nameVille p {
+  margin: 5px 0;
+}
+
+.nameVille a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.nameVille a:hover {
+  text-decoration: underline;
+}
+
+/* Stack de compétences */
+.stack {
+  font-size: 14px;
+  color: #555;
+  margin: 10px 0;
+}
+
+/* Liens LinkedIn */
+.contact-card a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+.contact-card a:hover {
+  text-decoration: underline;
+}
+
+/* Hobbies */
+.contact-card p {
+  font-weight: 900;
+  font-size: 1rem;
+  color: #d75151;
+  margin-top: 10px;
+}
+
+
+/* Styles pour le modal */
+.modal {
+  display: none; /* Masqué par défaut */
+  position: fixed; /* Rester en place */
+  z-index: 1001; /* Au-dessus des autres éléments */
+  left: 0;
+  top: 0;
+  width: 100%; /* Largeur totale */
+  height: 100%; /* Hauteur totale */
+  overflow: auto; /* Permet le défilement si nécessaire */
+  background-color: rgb(0,0,0); /* Couleur de fond */
+  background-color: rgba(0,0,0,0.4); /* Noir avec transparence */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% depuis le haut et centré */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Peut être plus ou moins large */
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+/* --------------------------------------------------------------------------- */
+
+.leaflet-popup-content {
+  text-align: center;
+  position: relative;
+}
+
+.leaflet-popup-content::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.leaflet-popup-content * {
+  position: relative;
+  z-index: 2;
+}
+
+.leaflet-popup-content .profile-photo {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin: 0 auto 10px auto;
+  display: block;
+}
+
+.leaflet-popup-content h2 {
+  margin-top: 10px;
+  font-size: 18px;
+  background-color: rgba(173, 216, 230, 1);
+  padding: 5px;
+  border-radius: 5px;
+  display: inline-block;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.leaflet-popup-content .info {
+  display: block;
+  margin: 5px 0;
+  background-color: rgba(173, 216, 230, 1);
+  padding: 5px;
+  border-radius: 5px;
+  text-align: center;
+  width: fit-content;
+  margin: 10px auto; 
+}
+
+.stack-icons {
+  background-color: rgba(173, 216, 230, 1);
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+  width: fit-content;
+  margin: 10px auto;
+}
+
+.stack-icon {
+  display: inline-block;
+}
+
+.stack-icon img {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+}
+
+.backgroundPopup{
+  border-radius: 50%;
 }
